<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="73dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:text="@string/second_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="10dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.jjoe64.graphview.GraphView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/graph"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/data_value_secScreen"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="73dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="70dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="5dp"/>
    <TextView
        android:text="@string/avg_Pitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/data_value_secScreen"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/textView4"
        android:layout_marginLeft="16dp" />


    <TextView
        android:id="@+id/data_value_secScreen"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:text="@string/data_of_avg_pitch"
        android:textSize="18sp"

        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="99dp"
        app:layout_constraintLeft_toRightOf="@+id/textView4" />


    <TextView
        android:text="@string/deviation_neg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/textView6"
        android:layout_marginLeft="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/data_value_secScreen_dev_neg" />
    <TextView
        android:id="@+id/data_value_secScreen_dev_neg"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:text="@string/data_of_deviation_neg"
        android:textSize="18sp"

        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="54dp"
        app:layout_constraintLeft_toRightOf="@+id/textView6"
        android:layout_marginLeft="-5dp" />


</android.support.constraint.ConstraintLayout>